# capybara-project

./: .cz.json  .gitignore  BUILDING.md  CHANGELOG.md  CMAKE_MIGRATION.md  CMakeLists.txt  DOCUMENTATION.md  EXPLOSION_INTEGRATION_TEST.md  Makefile  README.md  REFACTOR_SUMMARY_FINAL.md  REFACTOR_TEST_PLAN.md  REFACTOR_TEST_STEPS.md  RELEASES.md  RESUMEN_DB_HIGHSCORES.md  USAGE.md  build.bat  build.sh  build_static.bat  build_static.sh  main.c  run.sh  run_audio_demo.sh  run_debug_game.sh  run_enemy_test_arena.sh  run_player_showcase.sh  run_showcase.sh  run_sprite_showcase.sh  test_audio.sh  test_boss.sh
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_WORKFLOW.md
.github/actions/: README.md
.github/actions/build-latex-manual/: action.yml
.github/actions/build-raylib/: action.yml
.github/actions/get-version/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: README.md  build.yml  release.yml
assets/levels/: level1.json  level2.json  meta.json
docs/: API.md  ARCHITECTURE.md  AUDIO_ANALYZER.md  AUDIO_DEMO.md  BASS_DRIVEN_GAMEPLAY.md  BASS_DRIVEN_GAMEPLAY_ARCHIVED.md  BUILD.md  CI_CD_COMPLETE_GUIDE.md  DATABASE_SCHEMA.md  DEBUG_FEATURES.md  ENEMIES_AND_SPRITES.md  ENEMY_TEST_ARENA.md  ENERGY_MODE_SYSTEM.md  FLIGHT_PLAN.md  GAMEPLAY.md  HIGH_SCORES_PRESETS.md  HIGH_SCORES_UI.md  INDEX.md  INTERLEVEL_TRANSITION.md  JSON_ORCHESTRATION_REFACTOR.md  LEVEL1_PHASES.md  LEVEL2_PHASES.md  LEVEL_SYSTEM.md  NAME_INPUT_DIALOG.md  PLAYER_SHIP.md  POWERUPS.md  REFACTORING_20251018.md  TODO.md  USER_MANUAL.tex  USER_MANUAL_README.md  USER_MANUAL_SIMPLE.tex  WEAPONS_AND_DAMAGE.md  WEAPONS_AND_PROJECTILES.md
include/: audio_analysis.h  bass_events.h  collision.h  combat_system.h  constants.h  database.h  demo_common.h  enemy.h  enemy_types.h  explosion.h  game.h  input_config.h  input_manager.h  json_loader.h  level_system.h  menu.h  obstacle.h  player.h  player_ship.h  powerup.h  projectile_manager.h  projectile_types.h  renderer.h  types.h  utils.h  wave_system.h  weapon.h
src/core/: game.c  main.c
src/demo/: audio_analysis_cli.c  audio_analysis_gui.c  audio_bass_analyzer.c  audio_spectrogram.c  demo_common.c  enemy_showcase.c  enemy_showcase_sprites.c  player_ship_showcase.c  powerup_showcase.c  projectile_showcase.c
src/effects/: projectile_types.c
src/entities/: enemy.c  enemy_types.c  obstacle.c  player.c  player_ship.c
src/gameplay/: level1_waves.c  level2_waves.c  level_system.c  level_system_json.c  wave_system.c  weapon.c
src/input/: input_config.c  input_manager.c
src/physics/: collision.c
src/rendering/: renderer.c
src/systems/: bass_events.c  collision.c  combat_system.c  explosion.c  input_config.c  input_manager.c  menu.c  powerup.c  projectile_manager.c  projectile_types.c  renderer.c  static_waves.c  wave_system.c  weapon.c
src/tools/: generate_enemy_sprites.c  generate_player_sprite.c  generate_projectile_sprites.c  generate_spaceship_sprites.c  populate_highscores.c
src/ui/: menu.c
src/utils/: audio_analysis.c  database.c  json_loader.c  logger.c
